Updated the include.
Added the new signup.text.tsx test.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
       "@/css/*": ["css/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "test/signin.test.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "test/signin.test.tsx", "test/signup.test.tsx"],
   "exclude": ["node_modules"]
 }
