--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "framer-motion": "^11.9.0",
     "next": "14.2.13",
     "react": "^18",
