--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
       "@/components/*": ["components/*"],
       "@/icons/*": ["icons/*"],
       "@/css/*": ["css/*"],
-      "@/types/*": ["types/*"]
+      "@/types/*": ["types/*"],
+      "@/actions/*": ["actions/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "test/signin.test.tsx", "test/signup.test.tsx", "test/validateRegistration.test.ts"],
