Installed crypto-js for secure data operations.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.46.1",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^11.9.0",
     "next": "14.2.13",
     "react": "^18",
@@ -28,6 +29,7 @@
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.13",
     "@types/node": "^20",
     "@types/react": "^18",
