--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,11 +20,13 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
+      "@/public": ["public/*"],
       "@/components/*": ["components/*"],
       "@/icons/*": ["icons/*"],
       "@/css/*": ["css/*"],
       "@/types/*": ["types/*"],
-      "@/actions/*": ["actions/*"]
+      "@/actions/*": ["actions/*"],
+      "@/lib/*": ["lib/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "test/signin.test.tsx", "test/signup.test.tsx", "test/validateRegistration.test.ts"],
