--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "crypto-js": "^4.2.0",
     "framer-motion": "^11.9.0",
     "next": "14.2.13",
+    "nextjs-toploader": "^3.7.15",
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
