--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.46.1",
+    "@tanstack/react-query": "^5.66.8",
+    "@tanstack/react-query-devtools": "^5.66.8",
     "crypto-js": "^4.2.0",
     "framer-motion": "^11.9.0",
     "next": "14.2.13",
